1999-02-12  Marcus G. Daniels  <mgd@pojoaque.santafe.edu>

	* ActionCache.m ([ActionCache -createProcCtrl]): 
	Use SET_COMPONENT_WINDOW_GEOMETRY_RECORD_NAME instead of
	SET_WINDOW_GEOMETRY_RECORD_NAME.

1999-02-08  Marcus G. Daniels  <mgd@pojoaque.santafe.edu>

	* Makefile.am (CURRENT, AGE): Bump.  Version 1.4.1.

1999-01-31  Marcus G. Daniels  <mgd@pojoaque.santafe.edu>

	* Makefile.am (simtoolsgui_HEADERS): Remove global.h.

	* global.h: Removed.
	
	* SimpleProbeDisplay.m: Include simtoolgui.h.  Don't include 
	simtoolsgui/MessageProbeWidget.h or simtoolsgui/global.h.

	* simtoolsgui.h (ProbeDisplayManager): Declare -getDropImmediateFlag.

	* ControlPanel.m, CompleteProbeDisplay.m: Include simtoolgui.h
	instead of simtoolsgui/global.h.

1999-01-23  Marcus G. Daniels  <mgd@pojoaque.santafe.edu>

	* ActionCache.m, ClassDisplayWidget.m, ProbeDisplay.m: Use
	raiseEvent() instead of raiseEvent:.

	* ControlPanel.m ([ControlPanel -setStateSave]): Save
	lispArchiver and hdf5Archiver instead of archiver.

1999-01-20  Marcus G. Daniels  <mgd@chama.santafe.edu>

	* Makefile.am (CURRENT, AGE): Bump.  Clear revision.

	* ControlPanel.m ([ControlPanel -setStateSave]): Use [archiver save]
	instead of archiverSave().

1999-01-14  Alex Lancaster  <alex@santafe.edu>

	* MessageProbeWidget.m (printVal): When return from message probe
	is an unsigned char (_C_UCHR), print the octal value.  If the
	unsigned char is the special case of Boolean YES or NO value,
	print the octal character followed by the YES or NO in
	parentheses.

1998-12-31  Marcus G. Daniels  <mgd@chama.santafe.edu>

	* simtoolsgui.h (ActionCache, GUISwarm): Declare -drop.

	* GUISwarm.[hm] ([GUISwarm -drop]): New method.

	* ActionCache.[hm] ([ActionCache -drop]): New method.

1998-12-21  Marcus G. Daniels  <mgd@chama.santafe.edu>

	* MessageProbeWidget.m: Don't include ctype.h.

1998-12-18  Vladimir Jojic  <vjojic@wijiji.santafe.edu>

	* MultiVarProbeWidget.m ([MultiProbe -setCompareFunction:]): 
	Return self.
